src/styles/App.scss
/* ... */
.nav-header {
  position: absolute;
  z-index: 12;
  top: 0
}

.wrapper-documentary {
display: flex;
justify-content: center;
align-items: center;
height: 100vh;
width: 100vw;
background: black;
}

.documentary {
  width: 100%;
  height: 0vh;

  border-radius: 10px;
  animation: documentary 1.5s 1s ease-in-out forwards;
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  opacity:0;

}
.video-documentary {
  border-radius: 10px;
  height: 98%;
  width: 100%;
  opacity:0;
  animation: video-documentary 1s  2.5s forwards;
}
.video-documentary:focus {
  outline: none;
}
@keyframes documentary {
  0% {
      height: 0vh;
      opacity: 0;
      background-color: white;
  }

  20%{
      background-color: rgb(86,124,228)
  }

  100% {
      opacity: 1;
      height: 80%;
      background-color: transparent;
  }
}

@keyframes video-documentary {
  0% {
      opacity: 0;
  }
  100% {
      opacity: 1;
  }
}


.plyr {
  width: 86%;
  /* z-index to 1 when disabled animation of videostories */
  z-index: 1 !important;
  border-radius: 10px;
}
   
.nav-header {
  min-height: 10vh;
  font-size: 1 rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: white;
  width: 100%;
  padding: 2rem 0;
  position: fixed;
  z-index: 12;
  transition: all .3s ease;
}
.line1, .line2 {
width: 3rem;
height: 0.2rem;
margin: 0.4rem;
background: white;
pointer-events: none;
}

.main-videostories {
  position: absolute;
  width: 100%;
}

.slide {
  @media screen  and (min-width: 1024px) {
    min-height: 100vh;
    margin-bottom: 10vh; 
    margin-top: 10vh; 
    width: 80%;
  }

  margin: 0 auto 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: white;
  background: #17181a ;
}


.hero {
  width: 100%;
  height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}
.hero-title {
width: 50%;
text-align: left;
/*margin: 0 10%;*/
}
.hero-title h2{
  color: white;
  font-size: 6rem;
  font-family: "Montserrat", sans-serif;
}


.construction h2:first-child {
  color: white;
  font-size: 5rem;
}
.construction h2 {
  color: yellow;
  font-size: 3rem;
}

.landing-desc {
  width: 100%;
  height: 100vh;
  background:  linear-gradient(black, transparent);
}
.text-desc {
  padding: 2rem;
  display: flex;
  justify-content: center;
  padding-top: 3rem;
}
.text-desc h3 {
  color: white;
  font-size: 2.5rem;
  text-align: center;
}


.hero-desc{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex: 1;
  flex-basis: 25rem;
  padding-left: 5rem;
  position:  relative;
}
/* disabling animaiton */
.hero-desc > p {
  z-index: 1;
}

.hero-img {
  position: relative;
  flex: 1;
  flex-basis: 25rem;
  overflow: hidden;
}


.hero-img .video1{
  width: 100%;
  height: 100%;
  object-fit: cover;
  overflow:hidden;
  opacity: 0;
  padding: 10px;
}


.fashion-span {
  color: rgb(255, 139, 93)
}
.mountain-span {
  color: rgb(86,124,228)
}
.hike-span {
  color: rgb(167,110,231)
}

.hero-desc h2{
  font-family: "Roboto", sans-serif;
  font-size: 5rem;
}

.hero-desc p{
  padding: 3rem 0rem;
  font-size: 1.5rem;
  color: rgb(253,253,253);
}
.explore {
  padding: 1rem 2rem;
  background: none;
  border: none;
  color:white;
  border: 1px solid white;
  font-size: 1rem;
  text-decoration: none;
  cursor: pointer;
}


.nav-bar{
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: white;
  display: flex;
  justify-content: space-around;
  align-items: center;
  z-index: 11;
  opacity: 1;
  clip-path: circle(50px at 100% -10%);
  -webkit-clip-path:  circle(50px at 100% -10%);
}

.burger {
  cursor: pointer;
}

.nav-links {
  font-size: 3rem;
  flex-basis: 30rem;
}
.nav-links h3{
  padding: 1rem 0rem;
}

.contact {
  flex-basis: 30rem;
}

.contact h2{
  font-size: 3rem;
  padding: 2rem 0rem;
}

.contact p{
  font-size: 1.5rem;
  line-height: 2rem;
}

.reveal-img, 
.reveal-text{
  position: absolute;
  width: 100%;
  height: 150%;
  background: #17181a;
  left: 0;
}

/* .cursor {
  transition: all .1s ease-in-out;
  width: 2rem;
  height: 2rem;
  border: 2px solid white;
  border-radius: 50%;
  position: absolute;
  transform: translate(-50%, -50%);
  transform-origin: 75% 75%;
  pointer-events: none;
  transition-property: background, transform, border;
} */

.cursor.nav-active{
  background: rgb(86,124,228);
  transform: scale(3);
  border: .5px solid white;
}

.cursor.explore-active {
  background: white;
  transform: scale(2);
  border: 1px solid white;
}

.cursor-text{
  position: absolute;
  top: 50%;
  left: 50%;
  font-size: .5rem;
  color: black
}
.title {
  position: relative;
  overflow: hidden;
}

.title-swipe {
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  position: absolute;
  background: lightblue;
  mix-blend-mode: darken;
  transform: translateY(100%);
}

.t-swipe1{
  background: rgb(86,124,228);
}
.t-swipe2{
  background: rgb(167,110,231)
}
.t-swipe3{
  background: rgb(255, 139, 93)
}
.scrollmagic-pin-spacer {
  position: static !important
}

body.hide{
  overflow: hidden;
}

#root.hide{
  overflow: hidden;
}


/* OTHER PAGES */

.fashion1,
.fashion2,
.fashion3,
.fashion4 {
  min-height: 90vh;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  width: 70%;
  margin: auto;
  color: white;
  margin-top: 5rem;
  flex-wrap: wrap;
  position:relative;
}

.fashion2 {
  justify-content: center;
}

.fashion-img {
  height: 100%;
  width: 50%;
  /* flex-basis: rem; */
}


.fashion-text {
  position: relative;
  flex-basis: 25rem;
}
.twin-test {
  height: 100%;
}

video {
  width: 100%;
}

.fashion-img video-first {
  width: 100% !important;
  opacity: 0 !important;
}

.fashion-text h1 {
  font-size: 6rem;
  padding: 1rem 0rem;
}

.fashion1 h1{
  color: rgb(255, 139, 93)
}
.fashion2 h1{
  color: rgb(86,124,228)
}
/* ... */

